<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_card_bg"
    android:orientation="vertical"
    android:padding="@dimen/widget_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/widget_cluster_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/widget_cluster_placeholder"
            android:textColor="@color/widget_text_primary"
            android:textSize="@dimen/widget_cluster_name_text_size" />

        <TextView
            android:id="@+id/widget_warning_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/widget_warning_badge_bg"
            android:paddingStart="@dimen/widget_badge_horizontal_padding"
            android:paddingTop="@dimen/widget_badge_vertical_padding"
            android:paddingEnd="@dimen/widget_badge_horizontal_padding"
            android:paddingBottom="@dimen/widget_badge_vertical_padding"
            android:text="@string/widget_warning_badge_placeholder"
            android:textColor="@color/widget_warning_badge_text"
            android:textSize="@dimen/widget_badge_text_size"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/widget_section_spacing"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_health_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_health_dot"
            android:textColor="@color/widget_health_unreachable"
            android:textSize="@dimen/widget_health_dot_size" />

        <TextView
            android:id="@+id/widget_pod_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/widget_inline_spacing"
            android:text="@string/widget_pod_count_placeholder"
            android:textColor="@color/widget_text_primary"
            android:textSize="@dimen/widget_metric_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/widget_last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_last_updated_placeholder"
        android:textColor="@color/widget_text_secondary"
        android:textSize="@dimen/widget_subtitle_text_size" />
</LinearLayout>
